--- a/Neurorobotics_MOOC_initialization/weeks_config.json
+++ b/Neurorobotics_MOOC_initialization/weeks_config.json
@@ -7,7 +7,7 @@
     "access": null,
     "disabled": false,
     "picture": {
-      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/exercise1.png",
+      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/exercise1.gif",
       "alt": "Collab logo "
     },
     "next": "mooc_form",
@@ -31,7 +31,7 @@
     "access": null,
     "disabled": false,
     "picture": {
-      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/exercise2.png",
+      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/exercise2.gif",
       "alt": "Collab logo "
     },
     "next": "mooc_form",
