--- a/Neurorobotics_MOOC_initialization/weeks_config.json
+++ b/Neurorobotics_MOOC_initialization/weeks_config.json
@@ -1,47 +1,47 @@
 [
   {
-    "title": "Week 1 - Exercise 1: Braitenberg control as a way to explore the environment",
+    "title": "Week 1 - Mini-project 0: Braitenberg control as a way to explore the environment",
     "description": "Program the Pioneer 3DX robot to explore its environment and record the robot positions during the simulation.",
     "experience": ["all"],
     "maturity": null,
     "access": null,
     "disabled": false,
     "picture": {
-      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/exercise1.gif",
+      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/miniproject0.gif",
       "alt": "Collab logo "
     },
     "next": "mooc_form",
     "files": [   
       {
-        "entryname": "Week 1 - Exercise 1 (Jupyter Notebook)",
+        "entryname": "Week 1 - Mini-project 0 (Jupyter Notebook)",
         "appid": 175,
         "contenttype": "x-ipynb+json",
         "extension": ".ipynb",
-        "file": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb",
+        "file": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/miniproject0.ipynb",
         "initial": true,
         "justcopy": false
       }
     ]
   },
   {
-    "title": "Week 2 - Exercise 2: Transform robot positions into a Self Organizing Map (SOM)",
+    "title": "Week 2 - Mini-project 1: Transform robot positions into a Self Organizing Map (SOM)",
     "description": "Run the SOM algorithm on the robot positions to get a lattice capturing the main features of the environment.",
     "experience": ["all"],
     "maturity": null,
     "access": null,
     "disabled": false,
     "picture": {
-      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/exercise2.gif",
+      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/miniproject1.gif",
       "alt": "Collab logo "
     },
     "next": "mooc_form",
     "files": [
       {
-        "entryname": "Week 2 - Exercise 2 (Jupyter Notebook)",
+        "entryname": "Week 2 - Mini-project 1 (Jupyter Notebook)",
         "appid": 175,
         "contenttype": "x-ipynb+json",
         "extension": ".ipynb",
-        "file": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb",
+        "file": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb",
         "justcopy": false,
         "initial": true
       },
@@ -56,24 +56,24 @@
     ]
   },
   {
-    "title": "Week 3 - Exercise 3: Navigate the robot between any two points of its environment",
+    "title": "Week 3 - Mini-project 2: Navigate the robot between any two points of its environment",
     "description": "Implement the SARSA algorithm to produce a series of waypoints that join any two given locations.",
     "experience": ["all"],
     "maturity": null,
     "access": null,
     "disabled": false,
     "picture": {
-      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/exercise3.gif",
+      "src": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/thumbnails/miniproject2.gif",
       "alt": "Collab logo "
     },
     "next": "mooc_form",
     "files": [
       {
-        "entryname": "Week 3 - Exercise 3 (Jupyter Notebook)",
+        "entryname": "Week 3 - Mini-project 2 (Jupyter Notebook)",
         "appid": 175,
         "contenttype": "x-ipynb+json",
         "extension": ".ipynb",
-        "file": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb",
+        "file": "https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb",
         "justcopy": false,
         "initial": true
       }
